# sec-vpn

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  health.py  servers.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  redis.py  security.py
backend/app/models/: server.py  user.py
backend/app/schemas/: auth.py  health.py  server.py  user.py
backend/app/services/: auth_service.py  health_poller.py  node_agent_client.py  server_service.py  user_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_users_table.py  0002_add_servers_and_admin.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_servers.py
node-agent/: Dockerfile  pyproject.toml
node-agent/app/: main.py
node-agent/app/api/v1/: health.py  peers.py
node-agent/app/core/: config.py  logging.py
node-agent/app/schemas/: peer.py
node-agent/app/services/: wireguard.py
node-agent/tests/: test_peers.py
scripts/: gen-mtls-certs.sh
